--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@ body {
 }
 
 .display {
+  box-sizing: border-box;
   border: 1px solid black;
   text-align: right;
   font-size: 3em;
   padding: 10px;
-  height: 50px;
+  height: 70px;
+  padding: 10px;
 }
 
 .pad {
